# audiosplit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
inc/: asexception.h  decoder.h  encoder.h  splitfiltergraph.h
music/: Brahms - Variations.wma
src/: decoder.cc  encoder.cc  main.cc  splitfiltergraph.cc
